# revenant

./: .gitignore  CHECKSUMS  CLAUDE.md  NOTICE  README.md
.github/workflows/: deploy-pages.yml
docs/: ANALYSIS.md  ASSET-FORMATS.md  BIKE-UNLOCK-STATUS.md  JOURNEY.md  LEGAL.md  LEVEL-MAKER.md  MODDING-MAP.md  OVERNIGHT-SUMMARY.md  PRESERVATION-PLAYBOOK.md  ROADMAP.md  TILT-FIX.md  TILT-research.md  lesson.md  modmenu.md  patcher.md  procgen.md  research.md  sample-NSUserDefaults.plist  steps.md  vision.md
mod/: build.sh  mod.c  mod.cpp
patches/: manifest.json
tools/bike-editor/: README.md  bikeedit.py  index.html  server.py
tools/level-editor/: index.html  leveldec.py  levelgen.py  server.py
tools/unidbg/: pom.xml
tools/unidbg/src/main/java/com/resurrect/: AccessorProbe.java  BikeInfoDump.java  BikeRivalsRunner.java  GateProbe.java  IvarProbe.java  LevelCodec.java  LevelDecrypt.java  PatchVerify.java  SetterTrace.java
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: dist-build.ts  full-test.ts  index.html  package.json  sign-test.ts  vite.config.ts
web/src/: App.tsx  axml.ts  patcher.ts  sign.ts  styles.css  wasm.ts
